k8s/install-ingress-2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: services-ingress
spec:
  backend:
    serviceName: frontend-service
    servicePort: 8080
