k8s/install-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
spec:
  ingressClassName: contour
  rules:
    - host: localhost
      http:
        paths:
          - path: /frontend/
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
